# s3-log-handler

./: .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yml
src/s3_log_handler/: __init__.py  handler.py
tests/: test_handler.py
